force-app/main/default/objects/Taxes_Debt__c/Taxes_Debt__c.object-meta.xml
<CustomObject>
    <label>Taxes Debt</label>
    <nameField>
        <label>Taxes Debt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Taxes Debts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>