force-app/main/default/objects/Taxes_Debt__c/fields/Creditor_Name__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creditor Name</label>
    <referenceTo>Creditor__c</referenceTo>
    <relationshipLabel>Taxes Debts</relationshipLabel>
    <relationshipName>Taxes_Debts</relationshipName>
    <type>Lookup</type>
</CustomField>