force-app/main/default/objects/Taxes_Debt__c/fields/Estimated_Balance__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Balance__c</fullName>
    <label>Estimated Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>