force-app/main/default/objects/Taxes_Debt__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Taxes Debts</relationshipLabel>
    <relationshipName>Taxes_Debts</relationshipName>
    <type>Lookup</type>
</CustomField>